@@ -3,13 +3,13 @@ package com.magmaguy.elitemobs.config.customevents.premade;
 import com.magmaguy.elitemobs.config.customevents.CustomEventsConfigFields;
 import com.magmaguy.elitemobs.events.CustomEvent;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class ZombieTotemEvent extends CustomEventsConfigFields {
     public ZombieTotemEvent() {
         super("zombie_totem", true);
         setEventType(CustomEvent.EventType.TIMED);
-        setBossFilenames(Arrays.asList("totem_zombie_1.yml"));
+        setBossFilenames(List.of("totem_zombie_1.yml"));
         setLocalCooldown(120D);
         setGlobalCooldown(25D);
         setWeight(100D);
