@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class ShulkerCharmConfig extends CustomItemsConfigFields {
     public ShulkerCharmConfig() {
@@ -12,7 +13,7 @@ public class ShulkerCharmConfig extends CustomItemsConfigFields {
                 Material.FEATHER,
                 "&bShulker Charm",
                 Arrays.asList("&aI believe I can fly", "&aI believe I can touch the sky", "&aAnd you're coming with me!"));
-        setEnchantments(Arrays.asList("VANISHING_CURSE,1"));
+        setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(Arrays.asList("LEVITATION,0,self,onHit", "LEVITATION,1,target,onHit"));
         setDropWeight("1");
     }
