@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class SummonMerchantScrollConfig extends CustomItemsConfigFields {
     public SummonMerchantScrollConfig() {
@@ -12,7 +13,7 @@ public class SummonMerchantScrollConfig extends CustomItemsConfigFields {
                 Material.PAPER,
                 "&6Summon Merchant Scroll",
                 Arrays.asList("&aNeed to sell an item?", "&aRight-click to activate", "&aor yell &9Jeeves!"));
-        setEnchantments(Arrays.asList("SUMMON_MERCHANT,1"));
+        setEnchantments(List.of("SUMMON_MERCHANT,1"));
         setDropWeight("5");
     }
 }
