@@ -5,6 +5,7 @@ import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class TheStingerConfig extends CustomItemsConfigFields {
     public TheStingerConfig() {
@@ -14,7 +15,7 @@ public class TheStingerConfig extends CustomItemsConfigFields {
                 "&eThe Stinger",
                 Arrays.asList("&aFloat like a butterfly,", "&asting like a bee!"));
         setEnchantments(Arrays.asList("DAMAGE_ALL,1", "DURABILITY,1", "VANISHING_CURSE,1"));
-        setPotionEffects(Arrays.asList("POISON,0,target,onHit"));
+        setPotionEffects(List.of("POISON,0,target,onHit"));
         setItemType(CustomItem.ItemType.UNIQUE);
     }
 }
