@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class VampiricCharmConfig extends CustomItemsConfigFields {
     public VampiricCharmConfig() {
@@ -12,7 +13,7 @@ public class VampiricCharmConfig extends CustomItemsConfigFields {
                 Material.STICK,
                 "&bVampiric Charm",
                 Arrays.asList("&aNo one can remember where this", "&acame from, and no one can,", "&aforget how dangerous it is..."));
-        setEnchantments(Arrays.asList("VANISHING_CURSE,1"));
+        setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(Arrays.asList("HEAL,0,self,onHit", "BLINDNESS,0,self,onHit", "SLOW,0,self,onHit"));
         setDropWeight("1");
     }
