@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class EliteIllusionerConfig extends MobPropertiesConfigFields {
     public EliteIllusionerConfig() {
@@ -11,7 +11,7 @@ public class EliteIllusionerConfig extends MobPropertiesConfigFields {
                 EntityType.ILLUSIONER,
                 true,
                 "&fLvl &2$level &fElite &8Illusioner",
-                Arrays.asList("$player&c fell for $entity's &cillusions!"),
+                List.of("$player&c fell for $entity's &cillusions!"),
                 5);
     }
 }
