@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class EliteSilverfishConfig extends MobPropertiesConfigFields {
     public EliteSilverfishConfig() {
@@ -11,7 +11,7 @@ public class EliteSilverfishConfig extends MobPropertiesConfigFields {
                 EntityType.SILVERFISH,
                 true,
                 "&fLvl &2$level &fElite &7Silverfish",
-                Arrays.asList("$player &cmistook $entity &cfor a stone block!"),
+                List.of("$player &cmistook $entity &cfor a stone block!"),
                 1);
     }
 }
