@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class EliteWardenConfig extends MobPropertiesConfigFields {
     public EliteWardenConfig() {
@@ -11,7 +11,7 @@ public class EliteWardenConfig extends MobPropertiesConfigFields {
                 EntityType.WARDEN,
                 true,
                 "&fLvl &2$level &fElite &3Warden",
-                Arrays.asList("$entity &csensed $player &cwas nearby!"),
+                List.of("$entity &csensed $player &cwas nearby!"),
                 45);
     }
 }
